# insurance-agent

./: .gitignore  AWS_EC2_Deployment_Steps.md  Docker_HUB_TO_Instance.md  Readme.md  pyproject.toml  requirements.txt
app/: main.py
app/database/: vector_store.py
app/utils/: config.py
