[project]
name = "insurance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gunicorn==21.2.0",
    "langchain==1.1.3",
    "langchain-core==1.2.9",
    "langchain-openai==1.1.3",
    "langgraph==1.0.4",
    "openai==2.9.0",
    "pinecone>=7.0.1",
    "pydantic==2.7.4",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "streamlit==1.31.0",
]
